Изменен метод хэширования пароля на argon2 Добавлена функция поиска детали по любым совпадениям

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+argon2-cffi==25.1.0
+argon2-cffi-bindings==25.1.0
 blinker==1.9.0
+cffi==2.0.0
 click==8.3.0
 Flask==3.1.2
 Flask-SQLAlchemy==3.1.1
@@ -8,6 +11,8 @@ Jinja2==3.1.6
 MarkupSafe==3.0.3
 marshmallow==4.0.1
 pillow==11.3.0
+pycparser==2.23
+PyJWT==2.10.1
 SQLAlchemy==2.0.43
 typing_extensions==4.15.0
 Werkzeug==3.1.3
