--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,70 +1,65 @@
-# Название workflow (видно в интерфейсе)
 name: Build and Deploy to VPS
 
-# Когда запускать: при пуше в ветку main
 on:
   push:
     branches: [ main ]
 
-# Задачи которые нужно выполнить
 jobs:
-  # Задача 1: Сборка Docker образа
   build-and-push:
-    # Запускать на Ubuntu
     runs-on: ubuntu-latest
-    
-    # Шаги задачи
+
     steps:
-    # Шаг 1: Получить код репозитория
     - name: Checkout code
       uses: actions/checkout@v4
 
-    # Шаг 2: Залогиниться в Docker Hub
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    # Шаг 3: Собрать и отправить Docker образ
     - name: Build and push Docker image
       uses: docker/build-push-action@v4
       with:
-        context: .  # Директория с Dockerfile
-        file: ./Dockerfile  # Путь к Dockerfile
-        push: true  # Отправить в registry после сборки
+        context: .
+        file: ./Dockerfile
+        push: true
         tags: |
-          ${{ secrets.DOCKERHUB_USERNAME }}/up_db:latest
-          ${{ secrets.DOCKERHUB_USERNAME }}/up_db:${{ github.sha }}
+          artemtsurukin/up_db:latest
+          artemtsurukin/up_db:v1.0
+          artemtsurukin/up_db:${{ github.sha }}
 
-  # Задача 2: Деплой на сервер
   deploy:
     runs-on: ubuntu-latest
-    needs: build-and-push  # Ждать завершения сборки
-    
+    needs: build-and-push
+
     steps:
-    # Шаг 1: Настроить SSH доступ
     - name: Setup SSH
       uses: webfactory/ssh-agent@v0.8.0
       with:
         ssh-private-key: ${{ secrets.VPS_SSH_KEY }}
 
-    # Шаг 2: Подключиться к серверу и обновить приложение
     - name: Deploy to VPS
       run: |
-        # Подключаемся по SSH и выполняем команды на сервере
         ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USERNAME }}@${{ secrets.VPS_HOST }} "
-          # Останавливаем и удаляем старый контейнер
-          docker stop up_db || true
-          docker rm up_db || true
+          # Останавливаем текущий контейнер
+          docker stop up_db_container || true
+          docker rm up_db_container || true
           
-          # Скачиваем новый образ
-          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/up_db:latest
+          # Удаляем старый образ
+          docker image prune -f
+          
+          # Pull нового образа
+          docker pull artemtsurukin/up_db:latest
           
           # Запускаем новый контейнер
           docker run -d \
-            --name up_db:latest \
+            --name up_db_container \
             -p 5000:5000 \
             --restart unless-stopped \
-            ${{ secrets.DOCKERHUB_USERNAME }}/up_db:latest
+            artemtsurukin/up_db:latest
+          
+          # Проверяем что контейнер запустился
+          echo '✅ Проверка запущенных контейнеров:'
+          docker ps
         "
